Fix problems with assetpublisher not showing display templates

--- a/themes/deltares-theme/src/css/objects/portlet/_general.scss
+++ b/themes/deltares-theme/src/css/objects/portlet/_general.scss
@@ -5,3 +5,7 @@
 .dropdown-action{
   position: absolute;
 }
+
+.display-template .autofit-col {
+  position: unset;
+}
